work case study images change

--- a/work.html
+++ b/work.html
@@ -460,6 +460,28 @@
     <!-- LEFT: window + inner scroller -->
     <div class="case-stack__left">
       <div class="case-stack__left-inner">
+
+
+        <article class="case-panel">
+          <div class="eyebrow">
+            <span>Case Study: Visual Identity</span>
+            <span class="line"></span>
+          </div>
+          <h2>Unico</h2>
+          <p class="lead">A complete redesign focused on clarity, usability, and brand expression.</p>
+          <ul class="bullets">
+            <li>Design & development</li>
+            <li>UX strategy</li>
+            <li>Visual consistency</li>
+            <li>Mobile-first execution</li>
+          </ul>
+
+          <div class="case-panel__media">
+            <img src="images/Work_Unico.png" alt="Case preview" loading="lazy" decoding="async">
+          </div>
+        </article>
+
+
         <article class="case-panel">
           <div class="eyebrow">
             <span>Case Study: Website and Branding Design</span>
@@ -476,7 +498,7 @@
 
           <!-- mobile-only image (place inside each case-panel) -->
           <div class="case-panel__media">
-            <img src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/sign/images/Shandys%20webpage.png?token=eyJraWQiOiJzdG9yYWdlLXVybC1zaWduaW5nLWtleV8yYmE0NWUwNS02NWNiLTRmNWUtYTY2YS0zYTY2ODA1NDBmN2MiLCJhbGciOiJIUzI1NiJ9.eyJ1cmwiOiJpbWFnZXMvU2hhbmR5cyB3ZWJwYWdlLnBuZyIsImlhdCI6MTc2NjUxMDg5NSwiZXhwIjoxNzk4MDQ2ODk1fQ.GmK259_89a73uQT9VdychoKJovgKNuFgQRh_WdwVIcE" alt="Case preview" loading="lazy" decoding="async">
+            <img src="images/Work_Shandys.png" alt="Case preview" loading="lazy" decoding="async">
           </div>
         </article>
 
@@ -495,28 +517,11 @@
           </ul>
 
           <div class="case-panel__media">
-            <img src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/sign/images/Magna-Flow%20webpage.png?token=eyJraWQiOiJzdG9yYWdlLXVybC1zaWduaW5nLWtleV8yYmE0NWUwNS02NWNiLTRmNWUtYTY2YS0zYTY2ODA1NDBmN2MiLCJhbGciOiJIUzI1NiJ9.eyJ1cmwiOiJpbWFnZXMvTWFnbmEtRmxvdyB3ZWJwYWdlLnBuZyIsImlhdCI6MTc2NjUyNDAzNSwiZXhwIjoxNzk4MDYwMDM1fQ.9yJ_QzlRjdOi5LdKEZ_b0193WMyB_56nle8CAb8X_Dg" alt="Case preview" loading="lazy" decoding="async">
+            <img src="images/Work_MagnaFlow.png" alt="Case preview" loading="lazy" decoding="async">
           </div>
         </article>
 
-        <article class="case-panel">
-          <div class="eyebrow">
-            <span>Case Study: Visual Identity</span>
-            <span class="line"></span>
-          </div>
-          <h2>Unico</h2>
-          <p class="lead">A complete redesign focused on clarity, usability, and brand expression.</p>
-          <ul class="bullets">
-            <li>Design & development</li>
-            <li>UX strategy</li>
-            <li>Visual consistency</li>
-            <li>Mobile-first execution</li>
-          </ul>
-
-          <div class="case-panel__media">
-            <img src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/sign/images/UNICO%20webpage.png?token=eyJraWQiOiJzdG9yYWdlLXVybC1zaWduaW5nLWtleV8yYmE0NWUwNS02NWNiLTRmNWUtYTY2YS0zYTY2ODA1NDBmN2MiLCJhbGciOiJIUzI1NiJ9.eyJ1cmwiOiJpbWFnZXMvVU5JQ08gd2VicGFnZS5wbmciLCJpYXQiOjE3NjY1MTA5NDMsImV4cCI6MTc5ODA0Njk0M30.xm_OGaclkFwgNxbyxOjgCqVIgcvO5hvC1kz0Y3QWzi0" alt="Case preview" loading="lazy" decoding="async">
-          </div>
-        </article>
+        
       </div>
     </div>
 
@@ -524,9 +529,9 @@
     <div class="case-stack__right">
       <div class="case-stage">
         <div class="case-stage__mask">
-          <img class="case-img" src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/sign/images/Shandys%20webpage.png?token=eyJraWQiOiJzdG9yYWdlLXVybC1zaWduaW5nLWtleV8yYmE0NWUwNS02NWNiLTRmNWUtYTY2YS0zYTY2ODA1NDBmN2MiLCJhbGciOiJIUzI1NiJ9.eyJ1cmwiOiJpbWFnZXMvU2hhbmR5cyB3ZWJwYWdlLnBuZyIsImlhdCI6MTc2NjUxMDg5NSwiZXhwIjoxNzk4MDQ2ODk1fQ.GmK259_89a73uQT9VdychoKJovgKNuFgQRh_WdwVIcE" alt="Shandy's preview" />
-          <img class="case-img" src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/sign/images/Magna-Flow%20webpage.png?token=eyJraWQiOiJzdG9yYWdlLXVybC1zaWduaW5nLWtleV8yYmE0NWUwNS02NWNiLTRmNWUtYTY2YS0zYTY2ODA1NDBmN2MiLCJhbGciOiJIUzI1NiJ9.eyJ1cmwiOiJpbWFnZXMvTWFnbmEtRmxvdyB3ZWJwYWdlLnBuZyIsImlhdCI6MTc2NjUyNDAzNSwiZXhwIjoxNzk4MDYwMDM1fQ.9yJ_QzlRjdOi5LdKEZ_b0193WMyB_56nle8CAb8X_Dg" alt="Magna-Flow preview" />
-          <img class="case-img" src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/sign/images/UNICO%20webpage.png?token=eyJraWQiOiJzdG9yYWdlLXVybC1zaWduaW5nLWtleV8yYmE0NWUwNS02NWNiLTRmNWUtYTY2YS0zYTY2ODA1NDBmN2MiLCJhbGciOiJIUzI1NiJ9.eyJ1cmwiOiJpbWFnZXMvVU5JQ08gd2VicGFnZS5wbmciLCJpYXQiOjE3NjY1MTA5NDMsImV4cCI6MTc5ODA0Njk0M30.xm_OGaclkFwgNxbyxOjgCqVIgcvO5hvC1kz0Y3QWzi0" alt="Oleumfield preview" />
+          <img class="case-img" src="images/Work_Unico.png" alt="Unico communications event mangement website revamp" />
+          <img class="case-img" src="images/Work_Shandys.png" alt="Shandys houston heights restaurant website and branding" />
+          <img class="case-img" src="images/Work_MagnaFlow.png" alt="Magna Flow service business website and SEO lead generation" />
         </div>
       </div>
     </div>
