--- a/houston-web-design.html
+++ b/houston-web-design.html
@@ -665,232 +665,299 @@
   </script>
 
   <script>
-    const canvas = document.getElementById("vapor");
-    const ctx = canvas.getContext("2d", { alpha:true });
+/* =========================
+   VAPOR CANVAS (FULL SCRIPT)
+   - Mobile size stabilized (visualViewport)
+   - Mobile "too big" fixed (design-space clamp)
+   - Mobile color normalized (tint clamp)
+   - Keeps your original look on desktop
+   ========================= */
 
-    // Offscreen buffer (we render the sim here, then blur-composite to main)
-    const buf = document.createElement("canvas");
-    const btx = buf.getContext("2d", { alpha:true });
+(() => {
+  // If GSAP is already on the page, we can use its ticker.
+  // If not, we fall back to requestAnimationFrame.
+  const hasGSAP = typeof window.gsap !== "undefined" && window.gsap.ticker;
 
-    const S = {
-      w:0, h:0,
-      dpr: Math.max(1, Math.min(2, window.devicePixelRatio || 1)),
-      t:0,
+  const canvas = document.getElementById("vapor");
+  if (!canvas) return;
 
-      // slow drift
-      speed: 0.0046,
+  const ctx = canvas.getContext("2d", { alpha: true });
 
-      // ✅ smoothness / pixel control
-      // Higher scale = less pixelation. We also blur composite, so this stays airy.
-      scale: 0.70,     // (0.65–0.85 recommended)
-      fade: 0.22,     // less fade = more presence
-        glow: 0.25,      // tiny bump (still subtle)
-    density: 0.66,   // stronger vapor overall
+  // Offscreen buffer (render sim here then blur-composite to main)
+  const buf = document.createElement("canvas");
+  const btx = buf.getContext("2d", { alpha: true });
 
-      // across-screen band behavior
-      amp: 0.16,
-      drift: 0.16,
-      band: 0.16,
-      breakUp: 1.05,
+  const clamp = (v, min, max) => Math.max(min, Math.min(max, v));
 
-      // composite blur (kills pixel blocks)
-      blurBase: 10,    // main blur pass
-      blurDetail: 4,   // definition pass
-      blurGlow: 14,    // bloom pass
+  const isMobile = window.matchMedia("(max-width: 768px)").matches;
 
-      // mouse drift
-      mx:0, my:0, px:0, py:0
-    };
+  const S = {
+    w: 0, h: 0,
+    bw: 0, bh: 0,
 
-    function resize(){
-      S.w = Math.floor(window.innerWidth);
-      S.h = Math.floor(window.innerHeight);
+    dpr: Math.max(1, Math.min(2, window.devicePixelRatio || 1)),
+    t: 0,
 
-      // Main canvas uses DPR for sharp UI layers
-      canvas.width  = Math.floor(S.w * S.dpr);
-      canvas.height = Math.floor(S.h * S.dpr);
-      canvas.style.width  = S.w + "px";
-      canvas.style.height = S.h + "px";
-      ctx.setTransform(S.dpr,0,0,S.dpr,0,0);
+    // slow drift
+    speed: 0.0046,
 
-      // ✅ Buffer does NOT use DPR (prevents sampling artifacts / “grid” pixels)
-      // Render buffer in its own pixel space
-      buf.width  = Math.floor(S.w * S.scale);
-      buf.height = Math.floor(S.h * S.scale);
-      btx.setTransform(1,0,0,1,0,0);
+    // smoothness / pixel control
+    scale: 0.70,
+    fade: 0.22,
+    glow: 0.25,
+    density: 0.66,
 
-      // store for step()
-      S.bw = buf.width;
-      S.bh = buf.height;
+    // across-screen band behavior
+    amp: 0.16,
+    drift: 0.16,
+    band: 0.16,
+    breakUp: 1.05,
 
-      // Quality hints
-      ctx.imageSmoothingEnabled = true;
-      ctx.imageSmoothingQuality = "high";
-      btx.imageSmoothingEnabled = true;
-      btx.imageSmoothingQuality = "high";
+    // composite blur
+    blurBase: 10,
+    blurDetail: 4,
+    blurGlow: 14,
 
-      // clear
-      btx.fillStyle = "rgba(0,0,0,1)";
-      btx.fillRect(0,0,S.bw,S.bh);
-      ctx.clearRect(0,0,S.w,S.h);
-    }
-    window.addEventListener("resize", resize, { passive:true });
-    resize();
+    // mouse drift
+    mx: 0, my: 0, px: 0, py: 0,
 
-    window.addEventListener("pointermove", (e)=>{
-      S.mx = (e.clientX / S.w) * 2 - 1;
-      S.my = (e.clientY / S.h) * 2 - 1;
-    }, { passive:true });
+    // design-space clamp so tall mobile screens don't inflate everything
+    designW: 1400,
+    designH: 900
+  };
 
-    const clamp=(v,min,max)=>Math.max(min,Math.min(max,v));
+  // ✅ Mobile tuning (smaller, calmer, less "green hot")
+  if (isMobile) {
+    S.scale = 0.78;       // slightly higher = less chunky, "smaller" feel
+    S.fade  = 0.26;       // more fade = less heavy
+    S.density = 0.52;     // reduce intensity
+    S.amp   = 0.12;       // thinner band
+    S.band  = 0.12;
+    S.blurBase = 12;      // helps mobile gradient banding
+    S.blurGlow = 16;
+  }
 
-    // organic-ish fast noise
-    function n2(x,y){
-      return Math.sin(x*1.7 + Math.cos(y*1.3)) * Math.cos(y*1.5 + Math.sin(x*1.1));
-    }
+  function getViewportSize() {
+    const vv = window.visualViewport;
+    const vw = vv?.width  || window.innerWidth;
+    const vh = vv?.height || window.innerHeight;
+    return { vw, vh };
+  }
 
-    // Airy puff (no bright white hotspot)
-    function puff(x,y,r, colA, colB, a){
-      const g = btx.createRadialGradient(x,y,0, x,y,r);
-      g.addColorStop(0.00, colA.replace("{a}", (0.52*a).toFixed(4)));
-      g.addColorStop(0.38, colB.replace("{a}", (0.46*a).toFixed(4)));
-      g.addColorStop(0.78, colA.replace("{a}", (0.15*a).toFixed(4)));
-      g.addColorStop(1.00, colA.replace("{a}", "0"));
-      btx.fillStyle = g;
-      btx.beginPath();
-      btx.arc(x,y,r,0,Math.PI*2);
-      btx.fill();
-    }
+  function resize() {
+    const { vw, vh } = getViewportSize();
 
-    // Across-screen centerline
-    function ribbonY(u, yBase, amp, phase){
-      const t = S.t;
-      const f1 = Math.sin(t*0.95 + u*6.2 + phase);
-      const f2 = Math.sin(t*0.55 + u*13.0 - phase*0.7);
-      const f3 = Math.sin(t*1.35 + u*3.2);
-      const wave = f1*0.55 + f2*0.30 + f3*0.15;
-      return yBase + wave * amp;
-    }
+    S.w = Math.floor(vw);
+    S.h = Math.floor(vh);
 
-    function step(){
-      S.t += S.speed;
+    // Main canvas uses DPR
+    canvas.width  = Math.floor(S.w * S.dpr);
+    canvas.height = Math.floor(S.h * S.dpr);
+    canvas.style.width  = S.w + "px";
+    canvas.style.height = S.h + "px";
+    ctx.setTransform(S.dpr, 0, 0, S.dpr, 0, 0);
 
-      // mouse drift
-      S.px += (S.mx - S.px) * 0.03;
-      S.py += (S.my - S.py) * 0.03;
+    // Buffer does NOT use DPR (prevents sampling artifacts)
+    buf.width  = Math.floor(S.w * S.scale);
+    buf.height = Math.floor(S.h * S.scale);
+    btx.setTransform(1, 0, 0, 1, 0, 0);
 
-      const W = S.bw;
-      const H = S.bh;
+    S.bw = buf.width;
+    S.bh = buf.height;
 
-      // fade buffer (trails)
-      btx.globalCompositeOperation = "source-over";
-      btx.fillStyle = `rgba(0,0,0,${S.fade})`;
-      btx.fillRect(0,0,W,H);
+    // Quality hints
+    ctx.imageSmoothingEnabled = true;
+    ctx.imageSmoothingQuality = "high";
+    btx.imageSmoothingEnabled = true;
+    btx.imageSmoothingQuality = "high";
 
-      // draw vapor
-      btx.globalCompositeOperation = "lighter";
+    // Clear
+    btx.fillStyle = "rgba(0,0,0,1)";
+    btx.fillRect(0, 0, S.bw, S.bh);
+    ctx.clearRect(0, 0, S.w, S.h);
+  }
 
-      const layers = [
-        { y: 0.33, amp: S.amp*0.85, phase: 0.0,  drift:  0.14, tint: 0.0,  strength: 0.92 },
-        { y: 0.56, amp: S.amp*1.05, phase: 1.4,  drift: -0.10, tint: 1.3,  strength: 0.80 },
-        { y: 0.74, amp: S.amp*0.95, phase: 2.25, drift:  0.08, tint: 2.2,  strength: 0.70 }
-      ];
+  window.addEventListener("resize", resize, { passive: true });
+  window.visualViewport?.addEventListener("resize", resize, { passive: true });
+  resize();
 
-      for(const L of layers){
-        const sweep  = (Math.sin(S.t*0.55 + L.phase) * 0.5 + 0.5);
-        const xShift = (sweep * 0.7 + 0.15) * W * L.drift;
+  window.addEventListener("pointermove", (e) => {
+    S.mx = (e.clientX / S.w) * 2 - 1;
+    S.my = (e.clientY / S.h) * 2 - 1;
+  }, { passive: true });
 
-        const steps = 120; // continuous bands across screen
+  // organic-ish fast noise
+  function n2(x, y) {
+    return Math.sin(x * 1.7 + Math.cos(y * 1.3)) * Math.cos(y * 1.5 + Math.sin(x * 1.1));
+  }
 
-        for(let i=0;i<=steps;i++){
-          const u = i/steps;
+  // Airy puff (no bright hotspot)
+  function puff(x, y, r, colA, colB, a) {
+    const g = btx.createRadialGradient(x, y, 0, x, y, r);
+    g.addColorStop(0.00, colA.replace("{a}", (0.52 * a).toFixed(4)));
+    g.addColorStop(0.38, colB.replace("{a}", (0.46 * a).toFixed(4)));
+    g.addColorStop(0.78, colA.replace("{a}", (0.15 * a).toFixed(4)));
+    g.addColorStop(1.00, colA.replace("{a}", "0"));
+    btx.fillStyle = g;
+    btx.beginPath();
+    btx.arc(x, y, r, 0, Math.PI * 2);
+    btx.fill();
+  }
 
-          const TAIL = 520; // <— bigger = longer ends
-          const x = u*(W + TAIL*2) - TAIL + xShift + S.px*16;
-          const yC = ribbonY(u, H*L.y, H*L.amp, L.phase) + S.py*12;
+  // Across-screen centerline
+  function ribbonY(u, yBase, amp, phase) {
+    const t = S.t;
+    const f1 = Math.sin(t * 0.95 + u * 6.2 + phase);
+    const f2 = Math.sin(t * 0.55 + u * 13.0 - phase * 0.7);
+    const f3 = Math.sin(t * 1.35 + u * 3.2);
+    const wave = f1 * 0.55 + f2 * 0.30 + f3 * 0.15;
+    return yBase + wave * amp;
+  }
 
-          const band = (S.band * H);
+  function step() {
+    S.t += S.speed;
 
-          const tt = S.t*0.9 + L.phase + u*2.0;
-          const wx = n2(tt*0.8, u*4.0 + L.phase);
-          const wy = n2(u*3.0 - L.phase, tt*0.7);
+    // mouse drift smoothing
+    S.px += (S.mx - S.px) * 0.03;
+    S.py += (S.my - S.py) * 0.03;
 
-          const jx = wx * band * 0.36 * S.breakUp;
-          const jy = wy * band * 0.30 * S.breakUp;
+    const W = S.bw;
+    const H = S.bh;
 
-          // soft color drift; includes #54f3a4 (mint) but avoids too much white
-          const c1 = (Math.sin(S.t*0.30 + L.tint + u*2.1)*0.5 + 0.5);
-          const c2 = (Math.cos(S.t*0.24 - L.tint + u*1.7)*0.5 + 0.5);
+    // ✅ Clamp effect scaling so tall mobile screens don't inflate radii/bands
+    const refW = Math.min(S.designW, W);
+    const refH = Math.min(S.designH, H);
+    const sizeK = Math.min(refW / S.designW, refH / S.designH) || 1;
 
-          const A = `rgba(${Math.floor(84 + 22*c2)}, ${Math.floor(243 - 18*c1)}, ${Math.floor(164 + 34*c1)}, {a})`; // mint
-          const B = `rgba(${Math.floor(72 + 16*c1)}, ${Math.floor(155 + 120*c2)}, ${Math.floor(125 + 26*c2)}, {a})`;
+    // fade buffer (trails)
+    btx.globalCompositeOperation = "source-over";
+    btx.fillStyle = `rgba(0,0,0,${S.fade})`;
+    btx.fillRect(0, 0, W, H);
 
-          const end = 0.35 + 0.65 * (1 - Math.pow(Math.abs(u-0.5)*2, 2.2));
+    // draw vapor
+    btx.globalCompositeOperation = "lighter";
 
-          // PASS 1: wide haze sheet (defines long band, still vapor)
-          const r1 = clamp(band * (1.18 + 0.35*Math.sin(tt)), 52, 220);
-          const a1 = (0.010 + 0.010*c1) * S.density * L.strength * (0.40 + 0.60*end);
-          puff(x, yC, r1, A, B, a1);
+    const layers = [
+      { y: 0.33, amp: S.amp * 0.85, phase: 0.0,  drift:  0.14, tint: 0.0,  strength: 0.92 },
+      { y: 0.56, amp: S.amp * 1.05, phase: 1.4,  drift: -0.10, tint: 1.3,  strength: 0.80 },
+      { y: 0.74, amp: S.amp * 0.95, phase: 2.25, drift:  0.08, tint: 2.2,  strength: 0.70 }
+    ];
 
-          // PASS 2: wisps / inner turbulence
-          const r2 = clamp(r1*0.40, 20, 88);
-          const a2 = a1 * 0.78;
-          puff(x + jx, yC + jy, r2, B, A, a2);
+    for (const L of layers) {
+      const sweep  = (Math.sin(S.t * 0.55 + L.phase) * 0.5 + 0.5);
+      const xShift = (sweep * 0.7 + 0.15) * W * L.drift;
 
-          const off = (wy * 0.5 + 0.5) * band * 0.90;
-          puff(x - jx*0.55, yC + off*0.32, r2*0.78, A, B, a2*0.50);
-          puff(x + jx*0.45, yC - off*0.30, r2*0.72, B, A, a2*0.46);
-        }
+      const steps = 120; // continuous bands across screen
 
-        // super soft background volume (very low alpha)
-        const hx = W*0.5 + Math.sin(S.t*0.28 + L.phase)*W*0.12 + S.px*10;
-        const hy = H*L.y + Math.cos(S.t*0.26 - L.phase)*H*0.10 + S.py*8;
-        puff(hx, hy, Math.hypot(W,H)*0.22, "rgba(84,243,164,{a})", "rgba(170,110,255,{a})", 0.009*S.density);
+      for (let i = 0; i <= steps; i++) {
+        const u = i / steps;
+
+        const TAIL = 520;
+        const x = u * (W + TAIL * 2) - TAIL + xShift + S.px * 16;
+
+        const yC = ribbonY(u, H * L.y, (H * L.amp) * sizeK, L.phase) + S.py * 12;
+
+        // ✅ band thickness clamped
+        const band = (S.band * H) * sizeK;
+
+        const tt = S.t * 0.9 + L.phase + u * 2.0;
+        const wx = n2(tt * 0.8, u * 4.0 + L.phase);
+        const wy = n2(u * 3.0 - L.phase, tt * 0.7);
+
+        const jx = wx * band * 0.36 * S.breakUp;
+        const jy = wy * band * 0.30 * S.breakUp;
+
+        // soft color drift; includes #54f3a4 mint but normalizes mobile tint
+        const c1 = (Math.sin(S.t * 0.30 + L.tint + u * 2.1) * 0.5 + 0.5);
+        const c2 = (Math.cos(S.t * 0.24 - L.tint + u * 1.7) * 0.5 + 0.5);
+
+        const mobileTint = isMobile ? 0.92 : 1;
+
+        const A = `rgba(${Math.floor((84  + 22 * c2) * mobileTint)}, ${Math.floor((243 - 18 * c1) * mobileTint)}, ${Math.floor(164 + 34 * c1)}, {a})`;
+        const B = `rgba(${Math.floor((72  + 16 * c1) * mobileTint)}, ${Math.floor((155 + 120 * c2) * mobileTint)}, ${Math.floor(125 + 26 * c2)}, {a})`;
+
+        const end = 0.35 + 0.65 * (1 - Math.pow(Math.abs(u - 0.5) * 2, 2.2));
+
+        // PASS 1: wide haze sheet
+        const r1 = clamp(band * (1.18 + 0.35 * Math.sin(tt)), 52, 220);
+        const a1 = (0.010 + 0.010 * c1) * S.density * L.strength * (0.40 + 0.60 * end);
+        puff(x, yC, r1, A, B, a1);
+
+        // PASS 2: inner wisps
+        const r2 = clamp(r1 * 0.40, 20, 88);
+        const a2 = a1 * 0.78;
+        puff(x + jx, yC + jy, r2, B, A, a2);
+
+        const off = (wy * 0.5 + 0.5) * band * 0.90;
+        puff(x - jx * 0.55, yC + off * 0.32, r2 * 0.78, A, B, a2 * 0.50);
+        puff(x + jx * 0.45, yC - off * 0.30, r2 * 0.72, B, A, a2 * 0.46);
       }
 
-      btx.globalCompositeOperation = "source-over";
-
-      // ✅ Pixel-killing composite: blur the buffer as we upscale
-      ctx.globalCompositeOperation = "source-over";
-      ctx.clearRect(0,0,S.w,S.h);
-
-      // base pass (soft)
-      ctx.save();
-      ctx.filter = `blur(${S.blurBase}px)`;
-      ctx.globalAlpha = 1;
-      ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
-      ctx.restore();
-
-      // detail pass (less blur, still smooth)
-      ctx.save();
-      ctx.filter = `blur(${S.blurDetail}px)`;
-      ctx.globalCompositeOperation = "lighter";
-      ctx.globalAlpha = 0.55;
-      ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
-      ctx.restore();
-
-      // glow pass (very soft)
-      ctx.save();
-      ctx.filter = `blur(${S.blurGlow}px)`;
-      ctx.globalCompositeOperation = "lighter";
-      ctx.globalAlpha = S.glow;
-      ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
-      ctx.restore();
-
-      ctx.globalAlpha = 1;
-      ctx.globalCompositeOperation = "source-over";
-      ctx.filter = "none";
+      // very soft background volume
+      const hx = W * 0.5 + Math.sin(S.t * 0.28 + L.phase) * W * 0.12 + S.px * 10;
+      const hy = H * L.y + Math.cos(S.t * 0.26 - L.phase) * H * 0.10 + S.py * 8;
+      puff(hx, hy, Math.hypot(W, H) * 0.22, "rgba(84,243,164,{a})", "rgba(170,110,255,{a})", 0.009 * S.density);
     }
 
-    gsap.ticker.fps(60);
-    gsap.ticker.add(step);
+    btx.globalCompositeOperation = "source-over";
+
+    // composite: blur the buffer as we upscale
+    ctx.globalCompositeOperation = "source-over";
+    ctx.clearRect(0, 0, S.w, S.h);
+
+    // base pass (soft)
+    ctx.save();
+    ctx.filter = `blur(${S.blurBase}px)`;
+    ctx.globalAlpha = 1;
+    ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
+    ctx.restore();
+
+    // detail pass
+    ctx.save();
+    ctx.filter = `blur(${S.blurDetail}px)`;
+    ctx.globalCompositeOperation = "lighter";
+    ctx.globalAlpha = 0.55;
+    ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
+    ctx.restore();
+
+    // glow pass
+    ctx.save();
+    ctx.filter = `blur(${S.blurGlow}px)`;
+    ctx.globalCompositeOperation = "lighter";
+    ctx.globalAlpha = S.glow;
+    ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
+    ctx.restore();
+
+    ctx.globalAlpha = 1;
+    ctx.globalCompositeOperation = "source-over";
+    ctx.filter = "none";
+  }
+
+  // Run loop
+  if (hasGSAP) {
+    window.gsap.ticker.fps(60);
+    window.gsap.ticker.add(step);
 
     // Reduced motion
     if (window.matchMedia("(prefers-reduced-motion: reduce)").matches) {
-      gsap.ticker.remove(step);
-      for(let i=0;i<20;i++) step();
+      window.gsap.ticker.remove(step);
+      for (let i = 0; i < 20; i++) step();
     }
-  </script>
+  } else {
+    let rafId = 0;
+    const loop = () => {
+      step();
+      rafId = requestAnimationFrame(loop);
+    };
+    rafId = requestAnimationFrame(loop);
+
+    if (window.matchMedia("(prefers-reduced-motion: reduce)").matches) {
+      cancelAnimationFrame(rafId);
+      for (let i = 0; i < 20; i++) step();
+    }
+  }
+})();
+</script>
   <script src="app.js"></script>
 </body>
 </html>
