--- a/houston-web-design.html
+++ b/houston-web-design.html
@@ -464,7 +464,7 @@
       <div class="hero-grid">
         <div>
           <!--<div class="kicker">MCVDesign • Houston, Texas</div>-->
-          <h1 class="title"><span class="accent">Houston Web Design</span><br>for Businesses That Gets More Leads</h1>
+          <h1 class="title"><span class="accent">Houston Web Design</span><br>That Gets More Leads for Your Business</h1>
           <div class="proof-divider"></div>
           <p class="lede">
             We design and build custom websites for Houston businesses that turn clarity, performance, and structure into a reliable lead engine.
@@ -663,49 +663,30 @@
       window.addEventListener("resize", () => ScrollTrigger.refresh());
     }
   </script>
-
-  <script>
-/* =========================
-   VAPOR CANVAS (FULL SCRIPT)
-   - Mobile size stabilized (visualViewport)
-   - Mobile "too big" fixed (design-space clamp)
-   - Mobile color normalized (tint clamp)
-   - Keeps your original look on desktop
-   ========================= */
-
+<script>
 (() => {
-  // If GSAP is already on the page, we can use its ticker.
-  // If not, we fall back to requestAnimationFrame.
-  const hasGSAP = typeof window.gsap !== "undefined" && window.gsap.ticker;
-
   const canvas = document.getElementById("vapor");
-  if (!canvas) return;
+  const ctx = canvas.getContext("2d", { alpha:true });
 
-  const ctx = canvas.getContext("2d", { alpha: true });
-
-  // Offscreen buffer (render sim here then blur-composite to main)
+  // Offscreen buffer (we render the sim here, then blur-composite to main)
   const buf = document.createElement("canvas");
-  const btx = buf.getContext("2d", { alpha: true });
-
-  const clamp = (v, min, max) => Math.max(min, Math.min(max, v));
+  const btx = buf.getContext("2d", { alpha:true });
 
   const isMobile = window.matchMedia("(max-width: 768px)").matches;
 
   const S = {
-    w: 0, h: 0,
-    bw: 0, bh: 0,
-
+    w:0, h:0,
     dpr: Math.max(1, Math.min(2, window.devicePixelRatio || 1)),
-    t: 0,
+    t:0,
 
     // slow drift
     speed: 0.0046,
 
-    // smoothness / pixel control
-    scale: 0.70,
-    fade: 0.22,
-    glow: 0.25,
-    density: 0.66,
+    // ✅ smoothness / pixel control
+    scale: 0.70,     // (0.65–0.85 recommended)
+    fade: 0.22,      // less fade = more presence
+    glow: 0.25,      // tiny bump (still subtle)
+    density: 0.66,   // stronger vapor overall
 
     // across-screen band behavior
     amp: 0.16,
@@ -713,55 +694,64 @@
     band: 0.16,
     breakUp: 1.05,
 
-    // composite blur
-    blurBase: 10,
-    blurDetail: 4,
-    blurGlow: 14,
+    // composite blur (kills pixel blocks)
+    blurBase: 10,    // main blur pass
+    blurDetail: 4,   // definition pass
+    blurGlow: 14,    // bloom pass
 
     // mouse drift
-    mx: 0, my: 0, px: 0, py: 0,
-
-    // design-space clamp so tall mobile screens don't inflate everything
-    designW: 1400,
-    designH: 900
+    mx:0, my:0, px:0, py:0
   };
 
-  // ✅ Mobile tuning (smaller, calmer, less "green hot")
-  if (isMobile) {
-    S.scale = 0.78;       // slightly higher = less chunky, "smaller" feel
-    S.fade  = 0.26;       // more fade = less heavy
-    S.density = 0.52;     // reduce intensity
-    S.amp   = 0.12;       // thinner band
-    S.band  = 0.12;
-    S.blurBase = 12;      // helps mobile gradient banding
-    S.blurGlow = 16;
+  // ✅ Mobile-only visual matching
+  // We DON'T change the “look” logic—just normalize the viewport + scale.
+  const M = {
+    // desktop “visual reference” (tweak if you want it slightly smaller/larger on mobile)
+    refW: 1440,
+    refH: 900,
+    k: 1
+  };
+
+  function getVW() {
+    if (!isMobile) return window.innerWidth;
+    return Math.floor((window.visualViewport && window.visualViewport.width) || window.innerWidth);
+  }
+  function getVH() {
+    if (!isMobile) return window.innerHeight;
+    return Math.floor((window.visualViewport && window.visualViewport.height) || window.innerHeight);
   }
 
-  function getViewportSize() {
-    const vv = window.visualViewport;
-    const vw = vv?.width  || window.innerWidth;
-    const vh = vv?.height || window.innerHeight;
-    return { vw, vh };
+  function updateMobileScale(){
+    if (!isMobile) { M.k = 1; return; }
+    // Scale all “size-based” geometry so mobile feels like desktop.
+    // (If mobile looks too big, this k will be < 1.)
+    const vw = S.w;
+    const vh = S.h;
+    const kW = vw / M.refW;
+    const kH = vh / M.refH;
+    // Use the smaller ratio so it never inflates on tall phones
+    M.k = Math.max(0.72, Math.min(1.0, Math.min(kW, kH)));
   }
 
-  function resize() {
-    const { vw, vh } = getViewportSize();
+  function resize(){
+    S.w = Math.floor(getVW());
+    S.h = Math.floor(getVH());
 
-    S.w = Math.floor(vw);
-    S.h = Math.floor(vh);
+    updateMobileScale();
 
-    // Main canvas uses DPR
+    // Main canvas uses DPR for sharp UI layers
     canvas.width  = Math.floor(S.w * S.dpr);
     canvas.height = Math.floor(S.h * S.dpr);
     canvas.style.width  = S.w + "px";
     canvas.style.height = S.h + "px";
-    ctx.setTransform(S.dpr, 0, 0, S.dpr, 0, 0);
+    ctx.setTransform(S.dpr,0,0,S.dpr,0,0);
 
-    // Buffer does NOT use DPR (prevents sampling artifacts)
+    // ✅ Buffer does NOT use DPR (prevents sampling artifacts / “grid” pixels)
     buf.width  = Math.floor(S.w * S.scale);
     buf.height = Math.floor(S.h * S.scale);
-    btx.setTransform(1, 0, 0, 1, 0, 0);
+    btx.setTransform(1,0,0,1,0,0);
 
+    // store for step()
     S.bw = buf.width;
     S.bh = buf.height;
 
@@ -771,139 +761,140 @@
     btx.imageSmoothingEnabled = true;
     btx.imageSmoothingQuality = "high";
 
-    // Clear
+    // clear
     btx.fillStyle = "rgba(0,0,0,1)";
-    btx.fillRect(0, 0, S.bw, S.bh);
-    ctx.clearRect(0, 0, S.w, S.h);
+    btx.fillRect(0,0,S.bw,S.bh);
+    ctx.clearRect(0,0,S.w,S.h);
   }
 
-  window.addEventListener("resize", resize, { passive: true });
-  window.visualViewport?.addEventListener("resize", resize, { passive: true });
+  window.addEventListener("resize", resize, { passive:true });
+  if (window.visualViewport) {
+    window.visualViewport.addEventListener("resize", resize, { passive:true });
+    window.visualViewport.addEventListener("scroll", resize, { passive:true }); // iOS address bar changes
+  }
   resize();
 
-  window.addEventListener("pointermove", (e) => {
+  window.addEventListener("pointermove", (e)=>{
     S.mx = (e.clientX / S.w) * 2 - 1;
     S.my = (e.clientY / S.h) * 2 - 1;
-  }, { passive: true });
+  }, { passive:true });
+
+  const clamp=(v,min,max)=>Math.max(min,Math.min(max,v));
 
   // organic-ish fast noise
-  function n2(x, y) {
-    return Math.sin(x * 1.7 + Math.cos(y * 1.3)) * Math.cos(y * 1.5 + Math.sin(x * 1.1));
+  function n2(x,y){
+    return Math.sin(x*1.7 + Math.cos(y*1.3)) * Math.cos(y*1.5 + Math.sin(x*1.1));
   }
 
-  // Airy puff (no bright hotspot)
-  function puff(x, y, r, colA, colB, a) {
-    const g = btx.createRadialGradient(x, y, 0, x, y, r);
-    g.addColorStop(0.00, colA.replace("{a}", (0.52 * a).toFixed(4)));
-    g.addColorStop(0.38, colB.replace("{a}", (0.46 * a).toFixed(4)));
-    g.addColorStop(0.78, colA.replace("{a}", (0.15 * a).toFixed(4)));
+  // Airy puff (no bright white hotspot)
+  function puff(x,y,r, colA, colB, a){
+    const g = btx.createRadialGradient(x,y,0, x,y,r);
+    g.addColorStop(0.00, colA.replace("{a}", (0.52*a).toFixed(4)));
+    g.addColorStop(0.38, colB.replace("{a}", (0.46*a).toFixed(4)));
+    g.addColorStop(0.78, colA.replace("{a}", (0.15*a).toFixed(4)));
     g.addColorStop(1.00, colA.replace("{a}", "0"));
     btx.fillStyle = g;
     btx.beginPath();
-    btx.arc(x, y, r, 0, Math.PI * 2);
+    btx.arc(x,y,r,0,Math.PI*2);
     btx.fill();
   }
 
   // Across-screen centerline
-  function ribbonY(u, yBase, amp, phase) {
+  function ribbonY(u, yBase, amp, phase){
     const t = S.t;
-    const f1 = Math.sin(t * 0.95 + u * 6.2 + phase);
-    const f2 = Math.sin(t * 0.55 + u * 13.0 - phase * 0.7);
-    const f3 = Math.sin(t * 1.35 + u * 3.2);
-    const wave = f1 * 0.55 + f2 * 0.30 + f3 * 0.15;
+    const f1 = Math.sin(t*0.95 + u*6.2 + phase);
+    const f2 = Math.sin(t*0.55 + u*13.0 - phase*0.7);
+    const f3 = Math.sin(t*1.35 + u*3.2);
+    const wave = f1*0.55 + f2*0.30 + f3*0.15;
     return yBase + wave * amp;
   }
 
-  function step() {
+  function step(){
     S.t += S.speed;
 
-    // mouse drift smoothing
+    // mouse drift
     S.px += (S.mx - S.px) * 0.03;
     S.py += (S.my - S.py) * 0.03;
 
     const W = S.bw;
     const H = S.bh;
 
-    // ✅ Clamp effect scaling so tall mobile screens don't inflate radii/bands
-    const refW = Math.min(S.designW, W);
-    const refH = Math.min(S.designH, H);
-    const sizeK = Math.min(refW / S.designW, refH / S.designH) || 1;
-
     // fade buffer (trails)
     btx.globalCompositeOperation = "source-over";
     btx.fillStyle = `rgba(0,0,0,${S.fade})`;
-    btx.fillRect(0, 0, W, H);
+    btx.fillRect(0,0,W,H);
 
     // draw vapor
     btx.globalCompositeOperation = "lighter";
 
     const layers = [
-      { y: 0.33, amp: S.amp * 0.85, phase: 0.0,  drift:  0.14, tint: 0.0,  strength: 0.92 },
-      { y: 0.56, amp: S.amp * 1.05, phase: 1.4,  drift: -0.10, tint: 1.3,  strength: 0.80 },
-      { y: 0.74, amp: S.amp * 0.95, phase: 2.25, drift:  0.08, tint: 2.2,  strength: 0.70 }
+      { y: 0.33, amp: S.amp*0.85, phase: 0.0,  drift:  0.14, tint: 0.0,  strength: 0.92 },
+      { y: 0.56, amp: S.amp*1.05, phase: 1.4,  drift: -0.10, tint: 1.3,  strength: 0.80 },
+      { y: 0.74, amp: S.amp*0.95, phase: 2.25, drift:  0.08, tint: 2.2,  strength: 0.70 }
     ];
 
-    for (const L of layers) {
-      const sweep  = (Math.sin(S.t * 0.55 + L.phase) * 0.5 + 0.5);
+    for(const L of layers){
+      const sweep  = (Math.sin(S.t*0.55 + L.phase) * 0.5 + 0.5);
       const xShift = (sweep * 0.7 + 0.15) * W * L.drift;
 
       const steps = 120; // continuous bands across screen
 
-      for (let i = 0; i <= steps; i++) {
-        const u = i / steps;
+      for(let i=0;i<=steps;i++){
+        const u = i/steps;
 
-        const TAIL = 520;
-        const x = u * (W + TAIL * 2) - TAIL + xShift + S.px * 16;
+        // ✅ Mobile-only: scale “geometry” so it matches desktop visual weight.
+        const k = isMobile ? M.k : 1;
 
-        const yC = ribbonY(u, H * L.y, (H * L.amp) * sizeK, L.phase) + S.py * 12;
+        const TAIL = 520 * k; // <— only mobile scales this
+        const x = u*(W + TAIL*2) - TAIL + xShift + S.px*16;
 
-        // ✅ band thickness clamped
-        const band = (S.band * H) * sizeK;
+        const yC = ribbonY(u, H*L.y, (H*L.amp) * k, L.phase) + S.py*12;
 
-        const tt = S.t * 0.9 + L.phase + u * 2.0;
-        const wx = n2(tt * 0.8, u * 4.0 + L.phase);
-        const wy = n2(u * 3.0 - L.phase, tt * 0.7);
+        const band = (S.band * H) * k;
+
+        const tt = S.t*0.9 + L.phase + u*2.0;
+        const wx = n2(tt*0.8, u*4.0 + L.phase);
+        const wy = n2(u*3.0 - L.phase, tt*0.7);
 
         const jx = wx * band * 0.36 * S.breakUp;
         const jy = wy * band * 0.30 * S.breakUp;
 
-        // soft color drift; includes #54f3a4 mint but normalizes mobile tint
-        const c1 = (Math.sin(S.t * 0.30 + L.tint + u * 2.1) * 0.5 + 0.5);
-        const c2 = (Math.cos(S.t * 0.24 - L.tint + u * 1.7) * 0.5 + 0.5);
+        // soft color drift; your exact same palette
+        const c1 = (Math.sin(S.t*0.30 + L.tint + u*2.1)*0.5 + 0.5);
+        const c2 = (Math.cos(S.t*0.24 - L.tint + u*1.7)*0.5 + 0.5);
 
-        const mobileTint = isMobile ? 0.92 : 1;
+        const A = `rgba(${Math.floor(84 + 22*c2)}, ${Math.floor(243 - 18*c1)}, ${Math.floor(164 + 34*c1)}, {a})`;
+        const B = `rgba(${Math.floor(72 + 16*c1)}, ${Math.floor(155 + 120*c2)}, ${Math.floor(125 + 26*c2)}, {a})`;
 
-        const A = `rgba(${Math.floor((84  + 22 * c2) * mobileTint)}, ${Math.floor((243 - 18 * c1) * mobileTint)}, ${Math.floor(164 + 34 * c1)}, {a})`;
-        const B = `rgba(${Math.floor((72  + 16 * c1) * mobileTint)}, ${Math.floor((155 + 120 * c2) * mobileTint)}, ${Math.floor(125 + 26 * c2)}, {a})`;
-
-        const end = 0.35 + 0.65 * (1 - Math.pow(Math.abs(u - 0.5) * 2, 2.2));
+        const end = 0.35 + 0.65 * (1 - Math.pow(Math.abs(u-0.5)*2, 2.2));
 
         // PASS 1: wide haze sheet
-        const r1 = clamp(band * (1.18 + 0.35 * Math.sin(tt)), 52, 220);
-        const a1 = (0.010 + 0.010 * c1) * S.density * L.strength * (0.40 + 0.60 * end);
+        const r1 = clamp(band * (1.18 + 0.35*Math.sin(tt)), 52*k, 220*k);
+        const a1 = (0.010 + 0.010*c1) * S.density * L.strength * (0.40 + 0.60*end);
         puff(x, yC, r1, A, B, a1);
 
-        // PASS 2: inner wisps
-        const r2 = clamp(r1 * 0.40, 20, 88);
+        // PASS 2: wisps / inner turbulence
+        const r2 = clamp(r1*0.40, 20*k, 88*k);
         const a2 = a1 * 0.78;
         puff(x + jx, yC + jy, r2, B, A, a2);
 
         const off = (wy * 0.5 + 0.5) * band * 0.90;
-        puff(x - jx * 0.55, yC + off * 0.32, r2 * 0.78, A, B, a2 * 0.50);
-        puff(x + jx * 0.45, yC - off * 0.30, r2 * 0.72, B, A, a2 * 0.46);
+        puff(x - jx*0.55, yC + off*0.32, r2*0.78, A, B, a2*0.50);
+        puff(x + jx*0.45, yC - off*0.30, r2*0.72, B, A, a2*0.46);
       }
 
-      // very soft background volume
-      const hx = W * 0.5 + Math.sin(S.t * 0.28 + L.phase) * W * 0.12 + S.px * 10;
-      const hy = H * L.y + Math.cos(S.t * 0.26 - L.phase) * H * 0.10 + S.py * 8;
-      puff(hx, hy, Math.hypot(W, H) * 0.22, "rgba(84,243,164,{a})", "rgba(170,110,255,{a})", 0.009 * S.density);
+      // super soft background volume
+      const k = isMobile ? M.k : 1;
+      const hx = W*0.5 + Math.sin(S.t*0.28 + L.phase)*W*0.12 + S.px*10;
+      const hy = H*L.y + Math.cos(S.t*0.26 - L.phase)*H*0.10 + S.py*8;
+      puff(hx, hy, Math.hypot(W,H)*0.22 * k, "rgba(84,243,164,{a})", "rgba(170,110,255,{a})", 0.009*S.density);
     }
 
     btx.globalCompositeOperation = "source-over";
 
     // composite: blur the buffer as we upscale
     ctx.globalCompositeOperation = "source-over";
-    ctx.clearRect(0, 0, S.w, S.h);
+    ctx.clearRect(0,0,S.w,S.h);
 
     // base pass (soft)
     ctx.save();
@@ -933,28 +924,13 @@
     ctx.filter = "none";
   }
 
-  // Run loop
-  if (hasGSAP) {
-    window.gsap.ticker.fps(60);
-    window.gsap.ticker.add(step);
+  // ✅ Keep your GSAP ticker exactly
+  gsap.ticker.fps(60);
+  gsap.ticker.add(step);
 
-    // Reduced motion
-    if (window.matchMedia("(prefers-reduced-motion: reduce)").matches) {
-      window.gsap.ticker.remove(step);
-      for (let i = 0; i < 20; i++) step();
-    }
-  } else {
-    let rafId = 0;
-    const loop = () => {
-      step();
-      rafId = requestAnimationFrame(loop);
-    };
-    rafId = requestAnimationFrame(loop);
-
-    if (window.matchMedia("(prefers-reduced-motion: reduce)").matches) {
-      cancelAnimationFrame(rafId);
-      for (let i = 0; i < 20; i++) step();
-    }
+  if (window.matchMedia("(prefers-reduced-motion: reduce)").matches) {
+    gsap.ticker.remove(step);
+    for(let i=0;i<20;i++) step();
   }
 })();
 </script>
