--- a/houston-web-design.html
+++ b/houston-web-design.html
@@ -704,39 +704,76 @@
       // mouse drift
       mx:0, my:0, px:0, py:0
     };
+const IS_MOBILE = window.matchMedia("(hover: none) and (pointer: coarse)").matches;
+
+// keep your existing desktop values as the baseline (do NOT change them)
+const DESKTOP = {
+  dprMax: 2,
+  scale: S.scale,
+  blurBase: S.blurBase,
+  blurDetail: S.blurDetail,
+  blurGlow: S.blurGlow
+};
+
+// mobile overrides (only applied on mobile)
+const MOBILE = {
+  dprMax: 3,          // ✅ allow 3 on phones so blur has pixels to work with
+  scale: 0.88,        // ✅ higher buffer res -> circles disappear
+  blurBaseMul: 1.35,  // ✅ more airy
+  blurDetailMul: 1.25,
+  blurGlowMul: 1.45,
+  puffSizeMul: 0.88   // ✅ slightly smaller puffs (fixes “zoomed/blobby” look)
+};
 
     function resize(){
-      S.w = Math.floor(window.innerWidth);
-      S.h = Math.floor(window.innerHeight);
+  // Use visualViewport when available (helps iOS address bar / zoom weirdness)
+  const vw = window.visualViewport?.width  ?? window.innerWidth;
+  const vh = window.visualViewport?.height ?? window.innerHeight;
 
-      // Main canvas uses DPR for sharp UI layers
-      canvas.width  = Math.floor(S.w * S.dpr);
-      canvas.height = Math.floor(S.h * S.dpr);
-      canvas.style.width  = S.w + "px";
-      canvas.style.height = S.h + "px";
-      ctx.setTransform(S.dpr,0,0,S.dpr,0,0);
+  S.w = Math.floor(vw);
+  S.h = Math.floor(vh);
 
-      // ✅ Buffer does NOT use DPR (prevents sampling artifacts / “grid” pixels)
-      // Render buffer in its own pixel space
-      buf.width  = Math.floor(S.w * S.scale);
-      buf.height = Math.floor(S.h * S.scale);
-      btx.setTransform(1,0,0,1,0,0);
+  const dprMax = IS_MOBILE ? MOBILE.dprMax : DESKTOP.dprMax;
+  S.dpr = Math.max(1, Math.min(dprMax, window.devicePixelRatio || 1));
 
-      // store for step()
-      S.bw = buf.width;
-      S.bh = buf.height;
+  // desktop stays exactly what you set originally
+  const scale = IS_MOBILE ? MOBILE.scale : DESKTOP.scale;
 
-      // Quality hints
-      ctx.imageSmoothingEnabled = true;
-      ctx.imageSmoothingQuality = "high";
-      btx.imageSmoothingEnabled = true;
-      btx.imageSmoothingQuality = "high";
+  // Main canvas
+  canvas.width  = Math.floor(S.w * S.dpr);
+  canvas.height = Math.floor(S.h * S.dpr);
+  canvas.style.width  = S.w + "px";
+  canvas.style.height = S.h + "px";
+  ctx.setTransform(S.dpr,0,0,S.dpr,0,0);
 
-      // clear
-      btx.fillStyle = "rgba(0,0,0,1)";
-      btx.fillRect(0,0,S.bw,S.bh);
-      ctx.clearRect(0,0,S.w,S.h);
-    }
+  // Buffer canvas (sim space)
+  buf.width  = Math.floor(S.w * scale);
+  buf.height = Math.floor(S.h * scale);
+  btx.setTransform(1,0,0,1,0,0);
+
+  S.bw = buf.width;
+  S.bh = buf.height;
+
+  // blur tuning (only mobile changes)
+  if (IS_MOBILE) {
+    S.blurBase   = Math.round(DESKTOP.blurBase   * MOBILE.blurBaseMul);
+    S.blurDetail = Math.round(DESKTOP.blurDetail * MOBILE.blurDetailMul);
+    S.blurGlow   = Math.round(DESKTOP.blurGlow   * MOBILE.blurGlowMul);
+  } else {
+    S.blurBase   = DESKTOP.blurBase;
+    S.blurDetail = DESKTOP.blurDetail;
+    S.blurGlow   = DESKTOP.blurGlow;
+  }
+
+  ctx.imageSmoothingEnabled = true;
+  ctx.imageSmoothingQuality = "high";
+  btx.imageSmoothingEnabled = true;
+  btx.imageSmoothingQuality = "high";
+
+  btx.fillStyle = "rgba(0,0,0,1)";
+  btx.fillRect(0,0,S.bw,S.bh);
+  ctx.clearRect(0,0,S.w,S.h);
+}
     window.addEventListener("resize", resize, { passive:true });
     resize();
 
@@ -825,13 +862,24 @@
           const c1 = (Math.sin(S.t*0.30 + L.tint + u*2.1)*0.5 + 0.5);
           const c2 = (Math.cos(S.t*0.24 - L.tint + u*1.7)*0.5 + 0.5);
 
-          const A = `rgba(${Math.floor(84 + 22*c2)}, ${Math.floor(243 - 18*c1)}, ${Math.floor(164 + 34*c1)}, {a})`; // mint
-          const B = `rgba(${Math.floor(72 + 16*c1)}, ${Math.floor(155 + 120*c2)}, ${Math.floor(125 + 26*c2)}, {a})`;
+          // Keep mint anchored to your logo color, only allow subtle variation
+const gBoost = 18 * (c2 - 0.5);  // small +/- shift
+const bBoost = 10 * (c1 - 0.5);  // small +/- shift
+
+const baseR = 84;
+const baseG = 243;
+const baseB = 164;
+
+// A: primary mint (very stable)
+const A = `rgba(${baseR}, ${clamp(baseG + gBoost, 225, 255)}, ${clamp(baseB + bBoost, 150, 175)}, {a})`;
+
+// B: secondary mint (slightly darker, still not blue)
+const B = `rgba(${clamp(baseR - 10, 60, 90)}, ${clamp(baseG - 55 + gBoost, 160, 215)}, ${clamp(baseB - 35 + bBoost, 120, 155)}, {a})`;
 
           const end = 0.35 + 0.65 * (1 - Math.pow(Math.abs(u-0.5)*2, 2.2));
-
+          const sizeMul = IS_MOBILE ? MOBILE.puffSizeMul : 1;
           // PASS 1: wide haze sheet (defines long band, still vapor)
-          const r1 = clamp(band * (1.18 + 0.35*Math.sin(tt)), 52, 220);
+          const r1 = clamp(band * (1.18 + 0.35*Math.sin(tt)) * sizeMul, 52, 220);
           const a1 = (0.010 + 0.010*c1) * S.density * L.strength * (0.40 + 0.60*end);
           puff(x, yC, r1, A, B, a1);
 
